--- a/client/src/components/ft-shaka-video-player/ft-shaka-video-player.css
+++ b/client/src/components/ft-shaka-video-player/ft-shaka-video-player.css
@@ -388,18 +388,20 @@
   }
 }
 
-/* Mobile: Full width video player */
+/* Mobile: 50vh height like FreeTube */
 @media screen and (max-width: 639px) {
   .ftVideoPlayer {
-    width: 100vw !important;
-    height: 56.25vw !important;
-    max-width: 100vw !important;
+    width: 100% !important;
+    height: 50vh !important;
+    min-height: 220px !important;
+    max-width: 100% !important;
   }
 
   .ftVideoPlayer.sixteenByNine {
     aspect-ratio: unset !important;
-    width: 100vw !important;
-    height: 56.25vw !important;
+    width: 100% !important;
+    height: 50vh !important;
+    min-height: 220px !important;
   }
 
   .player {
